[tool.poetry]
name = "hyperliquid-monitor"
version = "0.1.0"
description = "A Hyperliquid trade monitor package"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "hyperliquid_monitor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
hyperliquid-python-sdk = "^0.8.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=hyperliquid_monitor --cov-report=term-missing"